[gd_scene load_steps=7 format=3 uid="uid://5cgg7eoquuia"]

[ext_resource type="Script" path="res://ui/menus/player_menu/items_menu.gd" id="1_xs487"]
[ext_resource type="Texture2D" uid="uid://d35s32lx7tgfy" path="res://ui/elements/ui_icons_8x8/icon_text.tres" id="2_ji8hq"]
[ext_resource type="Texture2D" uid="uid://bx3hnvlho3660" path="res://ui/elements/ui_icons_8x8/icon_potion.tres" id="3_4fb3i"]
[ext_resource type="Texture2D" uid="uid://4qmbgbteguu" path="res://ui/elements/ui_icons_8x8/icon_stick.tres" id="4_8b8fi"]
[ext_resource type="Texture2D" uid="uid://swa62uoi8bsv" path="res://ui/elements/ui_icons_8x8/icon_key.tres" id="5_inkp1"]
[ext_resource type="Texture2D" uid="uid://gdj6nqnq2vdm" path="res://entities/items/item_sprite_00.tres" id="6_sx646"]

[node name="ItemsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_xs487")

[node name="ItemsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 21.0
offset_right = 132.0
offset_bottom = 178.0

[node name="TitlePanel" type="Panel" parent="ItemsPanel"]
layout_mode = 0
offset_top = -19.0
offset_right = 40.0
offset_bottom = -1.0

[node name="Title" type="RichTextLabel" parent="ItemsPanel/TitlePanel"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 54.0
offset_bottom = 15.0
theme_type_variation = &"MenuTitle"
text = "Items"

[node name="HBoxContainer" type="HBoxContainer" parent="ItemsPanel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -137.0

[node name="AllItemsButton" type="Button" parent="ItemsPanel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("2_ji8hq")

[node name="ConsumableButton" type="Button" parent="ItemsPanel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("3_4fb3i")

[node name="MaterialButton" type="Button" parent="ItemsPanel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("4_8b8fi")

[node name="KeyItemButton" type="Button" parent="ItemsPanel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("5_inkp1")

[node name="ScrollContainer" type="ScrollContainer" parent="ItemsPanel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 23.0
offset_right = -5.0
offset_bottom = -5.0
follow_focus = true

[node name="ItemList" type="GridContainer" parent="ItemsPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/v_separation = 24

[node name="DetailPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 21.0
offset_right = 233.0
offset_bottom = 178.0

[node name="DetailTitlePanel" type="Panel" parent="DetailPanel"]
layout_mode = 0
offset_top = -19.0
offset_right = 86.0
offset_bottom = -1.0

[node name="Title" type="RichTextLabel" parent="DetailPanel/DetailTitlePanel"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 81.0
offset_bottom = 15.0
theme_type_variation = &"MenuTitle"
text = "Item Details"

[node name="SpriteBackground" type="Panel" parent="DetailPanel"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 21.0
offset_bottom = 21.0
theme_type_variation = &"SpriteBackgroundPanel"

[node name="Sprite" type="Sprite2D" parent="DetailPanel"]
position = Vector2(13, 13)
texture = ExtResource("6_sx646")

[node name="CategoryBackground" type="Panel" parent="DetailPanel"]
layout_mode = 0
offset_left = 27.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 21.0
theme_type_variation = &"TextBackgroundPanel"

[node name="Category" type="RichTextLabel" parent="DetailPanel"]
clip_contents = false
layout_mode = 0
offset_left = 29.0
offset_top = 8.0
offset_right = 94.0
offset_bottom = 19.0
text = "Category"

[node name="DescriptionTitle" type="RichTextLabel" parent="DetailPanel"]
clip_contents = false
layout_mode = 0
offset_left = 6.0
offset_top = 28.0
offset_right = 94.0
offset_bottom = 39.0
theme_type_variation = &"DarkerText"
text = "Description:"

[node name="Description Background" type="Panel" parent="DetailPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 40.0
offset_right = 95.0
offset_bottom = 152.0
theme_type_variation = &"TextBackgroundPanel"

[node name="Description" type="RichTextLabel" parent="DetailPanel"]
clip_contents = false
layout_mode = 0
offset_left = 7.0
offset_top = 42.0
offset_right = 93.0
offset_bottom = 150.0
text = "This is a placeholder Text"

[node name="ActionPanel" type="Panel" parent="DetailPanel"]
layout_mode = 0
offset_left = 101.0
offset_right = 159.0
offset_bottom = 49.0

[node name="UseButton" type="Button" parent="DetailPanel/ActionPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 53.0
offset_bottom = 23.0
text = "Use"

[node name="DiscardButton" type="Button" parent="DetailPanel/ActionPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 26.0
offset_right = 53.0
offset_bottom = 44.0
text = "Discard"

[connection signal="pressed" from="ItemsPanel/HBoxContainer/AllItemsButton" to="." method="_on_all_items_button_pressed"]
[connection signal="pressed" from="ItemsPanel/HBoxContainer/ConsumableButton" to="." method="_on_consumable_button_pressed"]
[connection signal="pressed" from="ItemsPanel/HBoxContainer/MaterialButton" to="." method="_on_material_button_pressed"]
[connection signal="pressed" from="ItemsPanel/HBoxContainer/KeyItemButton" to="." method="_on_key_item_button_pressed"]
[connection signal="pressed" from="DetailPanel/ActionPanel/DiscardButton" to="." method="_on_discard_button_pressed"]
